// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`common/component/element/input should call passed callbacks 1`] = `
<input
  className="m-form__control--text"
  id="input-callbacks"
  itemProp={undefined}
  name="input-callbacks"
  onBlur={[MockFunction]}
  onChange={[MockFunction]}
  placeholder=""
  type="text"
  value={undefined}
/>
`;

exports[`common/component/element/input should call passed callbacks 2`] = `
<input
  className="m-form__control--text"
  id="input-callbacks"
  itemProp={undefined}
  name="input-callbacks"
  onBlur={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
    }
  }
  onChange={[MockFunction]}
  placeholder=""
  type="text"
  value={undefined}
/>
`;

exports[`common/component/element/input should call passed callbacks 3`] = `
<input
  className="m-form__control--text"
  id="input-callbacks"
  itemProp={undefined}
  name="input-callbacks"
  onBlur={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
    }
  }
  onChange={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
    }
  }
  placeholder=""
  type="text"
  value={undefined}
/>
`;

exports[`common/component/element/input should render correctly with default callbacks 1`] = `
<input
  aria-required={true}
  className="m-form__control--text input"
  classNameLabel="input-label"
  id="input"
  itemProp={undefined}
  name="input"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Test input placeholder"
  required={true}
  type="text"
  value="4"
/>
`;

exports[`common/component/element/input should render correctly with default callbacks 2`] = `
<input
  aria-required={true}
  className="m-form__control--text input"
  classNameLabel="input-label"
  id="input"
  itemProp={undefined}
  name="input"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Test input placeholder"
  required={true}
  type="text"
  value="4"
/>
`;

exports[`common/component/element/input should render correctly with default callbacks 3`] = `
<input
  aria-required={true}
  className="m-form__control--text input"
  classNameLabel="input-label"
  id="input"
  itemProp={undefined}
  name="input"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Test input placeholder"
  required={true}
  type="text"
  value="4"
/>
`;
